added html structure

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       href="./images/NovusTerraLogo.png"
       type="image/x-icon"
     />
-    <title>Document</title>
+    <title>Kinetic Loader</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="kinetic"></div>
     <!-- Scripts -->
     <script src="./js/script.js"></script>
   </body>
